--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,8 +4,8 @@ pipeline {
         maven 'Maven 3.9.9'
         }
     environment {
-        SERVER_IP    = '47.130.154.251'
-        SSH_CRED_ID  = 'node-app-key'
+        SERVER_IP    = '47.129.59.238'
+        SSH_CRED_ID  = 'maven-app-key'
         TOMCAT_PATH  = '/var/lib/tomcat10/webapps'
         TOMCAT_SVC   = 'tomcat10'
     }
